Attempted fix for panels not appearing above other elements with defined z-index.

--- a/src/Tracy/assets/Bar/bar.css
+++ b/src/Tracy/assets/Bar/bar.css
@@ -15,11 +15,11 @@ body#tracy-debug { /* in popup window */
 }
 
 #tracy-debug:not(body) {
-	position: fixed;
+	position: absolute;
 	left: 0;
 	top: 0;
-	width: calc(100vw + 100px); /* bigger to not affect inner content when windows gets smaller */
-	height: calc(100vh + 100px);
+	width: calc(100vw - 100px); /* bigger to not affect inner content when windows gets smaller */
+	height: calc(100vh - 100px);
 	pointer-events: none;
 }
 
@@ -132,7 +132,7 @@ body#tracy-debug { /* in popup window */
 	border: 1px solid #c9c9c9;
 	background: #EDEAE0 url('data:image/png;base64,R0lGODlhAQAUALMAAOzq4e/t5e7s4/Dt5vDu5e3r4vDu5uvp4O/t5AAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAAAAAAALAAAAAABABQAAAQM0EgySEAYi1LA+UcEADs=') top;
 	background-size: 1em;
-	position: absolute;
+	position: fixed;
 
 	min-width: 50px;
 	white-space: nowrap;
@@ -237,7 +237,7 @@ body#tracy-debug .tracy-panel { /* in popup window */
 
 #tracy-debug .tracy-mode-peek,
 #tracy-debug .tracy-mode-float {
-	position: absolute;
+	position: fixed;
 	flex-direction: column;
 	padding: 10px;
 	min-width: 200px;
